--- a/clientApp/MyFirstApiSite/Properties/launchSettings.json
+++ b/clientApp/MyFirstApiSite/Properties/launchSettings.json
@@ -32,7 +32,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "homePage.html",
+      "launchUrl": "home.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
