--- a/clientApp/MyFirstApiSite/MyFirstApiSite.csproj
+++ b/clientApp/MyFirstApiSite/MyFirstApiSite.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="wwwroot\Categories.js" />
+    <None Include="wwwroot\js\Categories.js" />
   </ItemGroup>
 
   <ItemGroup>
@@ -36,10 +36,6 @@
     <Content Update="nlog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\NewFolder\" />
   </ItemGroup>
 
 </Project>
